fixed some spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -288,6 +288,7 @@ html,body{
 	max-width: 70%;
 	display:block;
 	margin:auto;
+	margin-top:100px;
 }
 
 
